--- a/view/frontend/templates/designer/page/view/designer.phtml
+++ b/view/frontend/templates/designer/page/view/designer.phtml
@@ -1,5 +1,5 @@
 
-<div class="printess">
+<div class="printess-designer">
 
     <button class="show-layouts-button btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#layoutOffcanvas" aria-controls="layoutOffcanvas">
         <?php echo __('Change Layout'); ?>
