Bugfix hover color

--- a/view/frontend/templates/designer/page/view/dynamiccss.phtml
+++ b/view/frontend/templates/designer/page/view/dynamiccss.phtml
@@ -25,6 +25,7 @@
 
     .printess-designer .btn-outline-primary:active,
     .printess-designer .btn-outline-primary:hover {
+        color: #ffffff;
         background-color: <?php echo $colors['primary_color_hover']; ?>;
         border-color: <?php echo $colors['primary_color_hover']; ?>;
     }
