--- a/view/frontend/layout/designer_page_view.xml
+++ b/view/frontend/layout/designer_page_view.xml
@@ -18,7 +18,7 @@
         <referenceContainer name="content">
             <block class="Digitalprint\PrintessDesigner\Block\Designer" name="designer" template="Digitalprint_PrintessDesigner::designer/page/view/designer.phtml" />
         </referenceContainer>
-        <block class="Digitalprint\Printessdesigner\Pricing\Render" name="product.price.render.designer">
+        <block class="Digitalprint\PrintessDesigner\Pricing\Render" name="product.price.render.designer">
             <arguments>
                 <argument name="price_render_handle" xsi:type="string">designer_product_prices</argument>
                 <argument name="use_link_for_as_low_as" xsi:type="boolean">true</argument>
