--- a/view/frontend/templates/designer/page/view/dynamiccss.phtml
+++ b/view/frontend/templates/designer/page/view/dynamiccss.phtml
@@ -1,7 +1,11 @@
 <?php $colors = $block->getCustomColors(); ?>
 
-<?php if ($colors['primary_color'] && $colors['primary_color_hover']) :?>
 <style>
+    .printess-designer #cartOffcanvas.offcanvas-bottom {
+        height: auto;
+    }
+
+    <?php if ($colors['primary_color'] && $colors['primary_color_hover']) :?>
 
     .printess-designer a {
         color: <?php echo $colors['primary_color']; ?>;
@@ -55,5 +59,7 @@
     .mobile-ui .mobile-property-button.selected .form-field-caption {
         border-color: <?php echo $colors['primary_color']; ?> !important;
     }
+    <?php endif; ?>
+
 </style>
-<?php endif; ?>
+
