--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -4,8 +4,20 @@
         <css src="Digitalprint_PrintessDesigner::css/designer.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <referenceContainer name="alert.urls">
-            <block class="Digitalprint\PrintessDesigner\Block\Catalog\Product\Designer" name="product.info.designer" template="Digitalprint_PrintessDesigner::catalog/product/view/designer.phtml" />
-        </referenceContainer>
+        <referenceBlock name="product.info">
+            <action method="setTemplate">
+                <argument name="template" xsi:type="string">Digitalprint_PrintessDesigner::catalog/product/view/form.phtml</argument>
+            </action>
+        </referenceBlock>
+        <referenceBlock name="product.info.addtocart">
+            <action method="setTemplate">
+                <argument name="template" xsi:type="string">Digitalprint_PrintessDesigner::catalog/product/view/addtocart.phtml</argument>
+            </action>
+        </referenceBlock>
+        <referenceBlock name="product.info.addtocart.additional">
+            <action method="setTemplate">
+                <argument name="template" xsi:type="string">Digitalprint_PrintessDesigner::catalog/product/view/addtocart.phtml</argument>
+            </action>
+        </referenceBlock>
     </body>
 </page>
