--- a/view/frontend/templates/catalog/product/view/form.phtml
+++ b/view/frontend/templates/catalog/product/view/form.phtml
@@ -20,6 +20,8 @@
             <input type="hidden" name="item"  value="<?= (int)$block->getRequest()->getParam('id') ?>" />
             <?= $block->getBlockHtml('formkey') ?>
             <?= $block->getChildHtml('form_top') ?>
+        <?php else: ?>
+            <input type="hidden" name="sku" value="<?= $_product->getSku() ?>" />
         <?php endif; ?>
         <?php if (!$block->hasOptions()) :?>
             <?= $block->getChildHtml('product_info_form_content') ?>
