Add native loader animation

--- a/view/frontend/layout/designer_page_view.xml
+++ b/view/frontend/layout/designer_page_view.xml
@@ -7,6 +7,7 @@
         <remove src="css/print.css" />
         <css src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" src_type="url" rel="stylesheet" type="text/css" />
         <css src="Digitalprint_PrintessDesigner::css/bs-layout.css" rel="stylesheet" type="text/css" />
+        <css src="Digitalprint_PrintessDesigner::css/designer.css" rel="stylesheet" type="text/css" />
         <meta name="robots" content="NOINDEX, FOLLOW"/>
     </head>
     <body>
