--- a/view/frontend/templates/designer/page/view/dynamiccss.phtml
+++ b/view/frontend/templates/designer/page/view/dynamiccss.phtml
@@ -59,6 +59,11 @@
     .mobile-ui .mobile-property-button.selected .form-field-caption {
         border-color: <?php echo $colors['primary_color']; ?> !important;
     }
+
+    .printess-designer-preloader {
+        border-bottom-color: <?php echo $colors['primary_color']; ?>;
+    }
+
     <?php endif; ?>
 
 </style>
