--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-        <css src="Digitalprint_PrintessDesigner::css/designer.css" rel="stylesheet" type="text/css" />
+        <css src="Digitalprint_PrintessDesigner::css/catalog.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <referenceBlock name="product.info">
