--- a/view/frontend/templates/designer/page/view/designer.phtml
+++ b/view/frontend/templates/designer/page/view/designer.phtml
@@ -1,6 +1,8 @@
 
 <div class="printess-designer" id="printessDesigner">
 
+    <div data-role="loader" class="printess-designer-preloader-wrapper"><div class="printess-designer-preloader"></div></div>
+
     <button class="show-layouts-button btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#layoutOffcanvas" aria-controls="layoutOffcanvas">
         <?php echo __('Change Layout'); ?>
     </button>
@@ -14,6 +16,8 @@
     </div>
 
     <div class="offcanvas" tabindex="-1" id="cartOffcanvas" aria-labelledby="offcanvasLabel">
+
+        <div data-role="loader" class="printess-designer-preloader-wrapper hidden"><div class="printess-designer-preloader"></div></div>
 
         <div class="offcanvas-header">
             <h5 id="cartOffcanvasLabel" class="fs-2 text-muted text-light"><?php echo __('Your order'); ?></h5>
@@ -69,18 +73,6 @@
             "Digitalprint_PrintessDesigner/js/printess": {
                 "printess": <?= $block->getJsonConfig() ?>,
                 "variants":  <?= $block->getJsonVariants() ?>
-            }
-       },
-
-       "#printessDesigner": {
-            "loader": {
-                "template": "<div data-role=\"loader\" class=\"position-absolute top-0 start-0 h-100 w-100 bg-light\" style=\"z-index: 99;\"><div class=\"d-flex w-100 h-100 justify-content-center align-items-center\"><div class=\"spinner-border text-secondary\" style=\"width: 5rem; height: 5rem;\" role=\"status\"><span class=\"visually-hidden\">Loading...</span></div></div></div>"
-            }
-       },
-
-       "#offcanvasBody": {
-            "loader": {
-                "template": "<div data-role=\"loader\" class=\"position-absolute top-0 start-0 h-100 w-100 bg-light\" style=\"z-index: 99;\"><div class=\"d-flex w-100 h-100 justify-content-center align-items-center\"><div class=\"spinner-border text-secondary\" style=\"width: 5rem; height: 5rem;\" role=\"status\"><span class=\"visually-hidden\">Loading...</span></div></div></div>"
             }
        }
 
