--- a/view/frontend/templates/catalog/product/view/form.phtml
+++ b/view/frontend/templates/catalog/product/view/form.phtml
@@ -6,14 +6,16 @@
  */
 ?>
 <?php $_helper = $this->helper(Magento\Catalog\Helper\Output::class); ?>
+<?php $_printess = $this->helper(Digitalprint\PrintessDesigner\Helper\Printess::class); ?>
 <?php $_product = $block->getProduct(); ?>
+<?php $_sku = $_product->getSku(); ?>
 
 <div class="product-add-form">
     <form data-product-sku="<?= $block->escapeHtml($_product->getSku()) ?>"
-          action="<?= $block->escapeUrl($block->getSubmitUrl($_product)) ?>" method="<?php if ($block->hasPrintessTemplate()) :?>get<?php else :?>post <?php endif; ?>"
-          <?php if (!$block->hasPrintessTemplate()) :?>id="product_addtocart_form" <?php endif;?>
-          <?php if ($_product->getOptions() && !$block->hasPrintessTemplate()) :?> enctype="multipart/form-data"<?php endif; ?>>
-        <?php if (!$block->hasPrintessTemplate()) :?>
+          action="<?= $block->escapeUrl($block->getSubmitUrl($_product)) ?>" method="<?php if ($_printess->hasTemplate($_sku)) :?>get<?php else :?>post <?php endif; ?>"
+          id="product_addtocart_form"
+          <?php if ($_product->getOptions() && !$_printess->hasTemplate($_sku)) :?> enctype="multipart/form-data"<?php endif; ?>>
+        <?php if (!$_printess->hasTemplate($_sku)) :?>
             <input type="hidden" name="product" value="<?= (int)$_product->getId() ?>" />
             <input type="hidden" name="selected_configurable_option" value="" />
             <input type="hidden" name="related_product" id="related-products-field" value="" />
@@ -33,7 +35,7 @@
         <?php if ($_product->isSaleable() && $block->hasOptions() && $block->getOptionsContainer() == 'container2') :?>
             <?= $block->getChildChildHtml('options_container') ?>
         <?php endif;?>
-        <?php if (!$block->hasPrintessTemplate()) :?>
+        <?php if (!$_printess->hasTemplate($_sku)) :?>
             <?= $block->getChildHtml('form_bottom') ?>
         <?php endif;?>
     </form>
