--- a/view/frontend/web/css/bs-layout.css
+++ b/view/frontend/web/css/bs-layout.css
@@ -3,12 +3,13 @@
     --printess-maxContrastColor: black;
     --printess-headlineColor: red;
 
-    --editor-margin-left: 30px;
-    --editor-margin-top: 30px;
-    --editor-margin-bottom: 30px;
-    --editor-margin-right: 15px;
-    --editor-space-between: 25px;
+    --editor-margin-left: 0px; /* 30px */
+    --editor-margin-top: 10px; /* 30px */
+    --editor-margin-bottom: 0px; /* 30px */
+    --editor-margin-right: 10px; /* 15px */
+    --editor-space-between: 10px; /* 25px */
     --editor-pagebar-height: 50px;
+    --editor-toolbar-width: 85px;
 
     --mobile-panel-background: #f8f8f8;
     --mobile-button-background: yellow;
@@ -86,6 +87,7 @@ body {
     grid-template-columns: auto 1fr;
     align-items: center;
     padding-top: var(--editor-margin-top);
+    padding-left: var(--editor-margin-right);
 }
 
 
@@ -107,6 +109,7 @@ body {
     grid-column: 1/3;
     padding-right: var(--editor-margin-right);
     grid-template-columns: auto 1fr auto;
+    height: fit-content;
 }
 
 #desktop-pagebar.big {
@@ -117,11 +120,14 @@ body {
     position: relative;
     grid-column-gap: 0px;
 }
+#printess-desktop-grid.main-tabs #desktop-pagebar.big {
+    grid-column: 1/5 !important;
+}
 .big-gradient {
     width: 474px;
     pointer-events: none;
     /* background: linear-gradient(90deg, transparent, #fff 100%); */
-    height: 142px;
+    height: 132px; /* 142px */
     position: absolute;
     right: 0;
     border-bottom: 1px solid gray;
@@ -130,7 +136,7 @@ body {
     width: 300px;
     pointer-events: none;
     /* background: linear-gradient(90deg, transparent, #fff 100%); */
-    height: 142px;
+    height: 132px; /* 142px */
     position: absolute;
     right: 0;
     border-left: 1px solid gray;
@@ -183,6 +189,9 @@ body {
 .big-page-item.mr {
     margin-right: 20px;
 }
+.big-page-item.mobile-mr {
+    margin-right: 10px;
+}
 .big-page-item > .big-page-thumb {
     border: 1px #666 solid;
     height: 72px;
@@ -197,18 +206,18 @@ body {
 }
 
 .corner-tools {
-    width: 270px;
+    width: 280px; /* 270px */
     position: absolute;
     right: var(--editor-margin-right);
     top: 10px;
-    height: 130px;
+    height: 120px; /* 130px */
     border: none;
     background-color: white;
     display: grid;
     grid-template-rows: auto 1fr auto;
     grid-template-columns: 1fr;
     align-items: center;
-    grid-row-gap: 10px;
+    grid-row-gap: 5px; /* 10px */
 
 }
 .corner-tools .desktop-title-bar {
@@ -225,6 +234,16 @@ body {
     margin: 0;
 }
 
+#printess-desktop-grid.main-tabs .corner-tools {
+    height: unset;
+}
+#printess-desktop-grid.main-tabs .corner-tools h2 {
+    min-height: 30px;
+}
+
+#printess-desktop-grid.main-tabs .big-gradient {
+    border-bottom: none;
+}
 
 #desktop-pagebar .undo-redo-bar {
     display: flex;
@@ -239,6 +258,9 @@ body {
     grid-template-columns: auto auto 1fr auto;
     grid-column-gap: 5px;
 }
+.corner-tools.expert-mode .undo-redo-bar {
+    grid-template-columns: auto auto auto 1fr auto;
+}
 
 .corner-tools .modify-page-buttons {
     display: grid;
@@ -250,7 +272,7 @@ body {
 
 #desktop-pagebar .undo-button {
     margin-right: 5px;
-    margin-left: 5px;
+    /* margin-left: 5px; */
 }
 #desktop-pagebar.big  .undo-button {
     margin-left: 0;
@@ -272,6 +294,19 @@ body {
 }
 #desktop-printess-container {
     outline: 1px solid gray;
+}
+
+#printess-desktop-grid.main-tabs #desktop-pagebar {
+    grid-row: 1;
+    grid-column: 1 / span 3;
+    border-bottom: 1px solid #6c757d;
+    padding-bottom: var(--editor-margin-top);
+}
+
+#printess-desktop-grid.main-tabs #desktop-pagebar.tabs {
+    height: 100%;
+    padding-bottom: var(--editor-margin-top);
+    grid-column: 1 / 4;
 }
 
 
@@ -352,6 +387,129 @@ body {
     justify-content: center;
 }
 
+#printess-desktop-grid.main-tabs {
+    grid-template-rows: calc(var(--editor-pagebar-height) + var(--editor-margin-top)) 1fr var(--editor-margin-bottom);
+    grid-template-columns: var(--editor-toolbar-width) 400px 1fr;
+    grid-column-gap: 0;
+}
+
+#printess-desktop-grid.main-tabs #desktop-printess-container {
+    grid-row: 2;
+    grid-column: 3 / span 4;
+    outline: none;
+}
+#printess-desktop-grid.main-tabs #desktop-printess-container.preview-grid {
+    grid-column: 1 / 5;
+}
+
+#printess-desktop-grid.main-tabs #desktop-properties {
+    grid-row: 2;
+    grid-column: 2;
+    padding: 10px;
+    border-right: 1px solid #6c757d;
+}
+
+.tabs-navigation {
+    background-color: #6c757d;
+    width: var(--editor-toolbar-width);
+    grid-row: 2 / 4;
+    grid-column: 1;
+}
+.tabs-navigation > ul {
+    flex-direction: column;
+}
+
+.tabs-navigation li.nav-item {
+    color: var(--bs-light);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0 20px 0;
+    cursor: pointer;
+    font-size: 9pt;
+}
+
+.tabs-navigation li.nav-item.selected {
+    background-color: #525960;
+    color: white;
+}
+
+.tabs-navigation a.nav-link {
+    word-break: break-all;
+    width: var(--editor-toolbar-width);
+    padding: 10px 8px;
+    text-align: center;
+    color: var(--bs-light);
+}
+
+.tabs-navigation li.nav-item.selected a.nav-link {
+    color: white;
+}
+
+#printess-desktop-grid.main-tabs .tab-content.card {
+    border: none;
+}
+
+#tabs-panel-photo-frames li.nav-item {
+    text-align: center;
+    flex: 1 0 auto;
+}
+
+.properties-title {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: 1fr;
+    grid-gap: 10px;
+    margin-bottom: 1.5rem!important;
+    align-items: center;
+}
+
+.properties-title > h3 {
+    margin: 0;
+    grid-column: 2;
+}
+
+.properties-title button {
+    grid-area: 1;
+    cursor: pointer;
+}
+
+.properties-title svg {
+    width: 20px;
+}
+
+.properties-title.only-title {
+    display: inline-block;
+}
+
+/* .tabs-navigation li.nav-item.selected {
+  background-color: #525960;
+  color: white;
+}
+.tabs-navigation li.nav-item.selected > svg {
+  color: white;
+}
+.tabs-navigation li.nav-item.selected > a {
+  color: white;;
+} */
+
+.desktop-tab-icon {
+    width: 30px;
+    height: 30px;
+    min-height: 30px;
+}
+
+.desktop-title-or-steps {
+    grid-row: 1;
+    grid-column: 4;
+    padding: 10px;
+    border-bottom: 1px solid #6c757d;
+}
+
+.desktop-title-or-steps .desktop-title-bar {
+    grid-gap: 5px;
+}
 
 .book-shadow-gradient-left {
     position: absolute;
@@ -509,6 +667,65 @@ body {
         color: rgba(255, 255, 255, 0.4);
         border-color: rgba(255, 255, 255, 0.4)!important;
     }
+
+    .fullscreen-add-properties {
+        position: fixed;
+        height: 100vh;
+        width: 100vw;
+        left: 0px;
+        z-index: 999;
+        background-color: var(--mobile-panel-background);
+        display: grid;
+        grid-template-rows: 50px 1fr;
+        grid-row-gap: 10px;
+    }
+    .mobile-tabs {
+        grid-template-rows: 50px 1fr 70px;
+    }
+    .fullscreen-add-properties .image-list-header {
+        margin-bottom: 0px;
+    }
+    .mobile-fullscreen-content {
+        padding: 10px;
+        height: 100%;
+        overflow-y: auto;
+    }
+    .mobile-fullscreen-content .tab-content.card {
+        border: none;
+        background-color: transparent;
+    }
+    .mobile-fullscreen-content .tab-pane.card-body.fade {
+        padding: 1rem 0;
+    }
+    .mobile-fullscreen-content .nav-tabs .nav-link.active {
+        background-color: transparent;
+        border-color: #dee2e6 #dee2e6 var(--mobile-panel-background);
+    }
+
+    .tabs-navigation {
+        width: 100%;
+        overflow: auto;
+        grid-area: unset;
+    }
+    .tabs-navigation > ul {
+        height: 100%;
+        flex-direction: row;
+        flex-wrap: nowrap;
+    }
+    .tabs-navigation li.nav-item {
+        padding: 10px 0 5px;
+    }
+    .desktop-tab-icon {
+        width: 25px;
+        height: 25px;
+        min-width: 25px;
+    }
+    .tabs-navigation a.nav-link {
+        word-break: unset;
+        padding: 5px;
+        width: fit-content;
+        min-width: 80px;
+    }
 }
 
 .badge-list{
@@ -537,7 +754,7 @@ body {
 .error-list {
     max-height: calc(100vh - 500px);
     border: 1px solid #ccc;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .token-warning {
@@ -580,7 +797,8 @@ input[type="radio"]:checked+label > svg {
 
 
 .mobile-group-snippets-container {
-    padding-left: 15px;
+    /* padding-left: 15px; */
+    padding: 0 10px;
     height: 100%;
     width: 100%;
     overflow: hidden auto;
@@ -603,9 +821,11 @@ input[type="radio"]:checked+label > svg {
     justify-content: center;
 }
 .snippet-thumb.big {
-    width: 140px;
-    height: 140px;
-
+    max-width: 250px;
+    height: unset;
+    max-height: 250px;
+    margin-bottom: 6px;
+    min-width: 150px;
 }
 .snippet-thumb.big > img {
     border: 1px solid var(--mobile-button-border);
@@ -620,9 +840,17 @@ input[type="radio"]:checked+label > svg {
     border: 1px solid var(--mobile-button-border-selected);
 }
 .snippet-thumb > img {
+    width: fit-content;
     max-width: 100%;
     max-height: 100%;
     background-color: white;
+}
+.snippet-thumb.big > img {
+    width: 100%;
+}
+.snippet-thumb.large {
+    width: 200px;
+    height: 200px;
 }
 
 .snippet-cluster-name {
@@ -645,6 +873,47 @@ input[type="radio"]:checked+label > svg {
     box-shadow: 0 0 0 0 var(--bs-primary);
     animation: pulse-blue 1s cubic-bezier(0.4, 0, 1, 1) infinite;
 }
+
+
+.button-with-caption {
+    padding-top: 0px;
+    padding-bottom: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+.button-with-caption > div {
+    font-size: 10px;
+    line-height: 10px;
+    margin-top: -4px;
+}
+.button-with-caption > svg {
+    height: 18px;
+}
+.corner-tools > .undo-redo-bar > .button-with-caption > svg {
+    height: 15px;
+}
+.corner-tools > .undo-redo-bar {
+    grid-column-gap: 0px;
+}
+
+.button-mobile-with-caption {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: .25rem .5rem;
+}
+.button-mobile-with-caption > div {
+    font-size: .7rem;
+    line-height: 10px;
+}
+.button-mobile-with-caption svg {
+    margin-right: 5px;
+    height: 20px;
+}
+
 
 @keyframes pulse-blue {
     0% {
@@ -677,9 +946,15 @@ label {
     font-family: var(--font-family);
 }
 
-label>span {
+label > span {
     display: inline-block;
     min-width: 100px;
+}
+
+svg.scale-warning {
+    min-width: 40px;
+    height: 40px;
+    margin-right: 20px;
 }
 
 input[type='text'] {
@@ -790,6 +1065,8 @@ input[type='range']::-moz-range-thumb {
     left: 0px;
     z-index: 999;
     background-color: var(--mobile-panel-background);
+    display: grid;
+    grid-template-rows: 55px 1fr;
 }
 
 .upload-list-preset {
@@ -1021,6 +1298,30 @@ input#invert-image-checker {
 }
 
 
+.text-large-properties   {
+    overflow-y: auto;
+    max-height: 200px;
+}
+.text-large-properties .color-picker-color  {
+    width: 25px !important;
+    height: 25px !important;
+}
+.text-large-properties .color-picker-drop-down  {
+    margin-left: -2px;
+    justify-content: left;
+}
+.text-large-properties .list-group-grid-style  {
+    margin-left: -4px;
+    justify-content: left;
+}
+.text-large-properties .list-group-grid-style > li {
+    padding: 0.2rem 0.5rem;
+}
+.text-large-properties .font.list-group-item {
+    padding: 0.2rem 1rem;
+}
+
+
 .step-badge {
     align-self: center;
 
@@ -1203,6 +1504,9 @@ input#invert-image-checker {
     margin-top: 2px;
     padding: 0;
 }
+.color-picker-color.selected {
+    border: black 2px solid;
+}
 #custom-color-picker {
     width: 35px;
     height: 35px;
@@ -1290,7 +1594,7 @@ input#invert-image-checker {
 }*/
 
 .ui-hint-alert {
-    max-width: 80vw;
+    max-width: 420px;
     z-index: 4;
     padding-right: 16px;
 }
@@ -1314,9 +1618,9 @@ input#invert-image-checker {
 
 .frame-hint-pointer {
     position: absolute;
-    top: 15px;
-    left: 4px;
-    width: 30px;
+    top: 12px;
+    left: 2px;
+    width: 2.5em;
 }
 .frame-hint-pulse {
     background: var(--bs-warning);
@@ -1326,6 +1630,10 @@ input#invert-image-checker {
     width: 30px;
     transform: scale(1);
     animation: pulse-orange 1500ms cubic-bezier(0.4, 0, 1, 1) infinite;
+    z-index: 9999;
+    color: white;
+    stroke: black;
+    stroke-width: 15px;
 }
 @keyframes pulse-orange {
     0% {
@@ -1545,7 +1853,16 @@ input#invert-image-checker {
     margin-right: 45vw !important;
 }
 
-
+/* prevent text/div hightlighting on mobile */
+.no-selection {
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
 
 .mobile-property-circle {
     grid-row: 1;
@@ -1986,11 +2303,14 @@ input#invert-image-checker {
         display: flex;
     }
     .group-snippets > .snippet-thumb {
-        width: 60px;
-        height: 60px;
+        width: 100px;
+        height: 100px;
     }
     .error-list {
         max-height: calc(100vh - 300px);
+    }
+    .ui-hint-alert {
+        max-width: 80vw;
     }
 
 }
