--- a/view/base/templates/designer/page/view/designer.phtml
+++ b/view/base/templates/designer/page/view/designer.phtml
@@ -71,6 +71,7 @@
     {
        "*": {
             "Digitalprint_PrintessDesigner/js/printess": {
+                "session": <?= $block->getSession() ?>,
                 "printess": <?= $block->getJsonConfig() ?>,
                 "variants":  <?= $block->getJsonVariants() ?>
             }
