--- a/view/base/web/css/bs-layout.css
+++ b/view/base/web/css/bs-layout.css
@@ -79,6 +79,8 @@ body {
     grid-template-rows: calc(var(--editor-pagebar-height) + var(--editor-margin-top)) 1fr var(--editor-margin-bottom);
     grid-template-columns: 1fr 450px;
     column-gap: var(--editor-space-between);
+
+    overflow: hidden;
 }
 
 #desktop-pagebar {
@@ -693,7 +695,7 @@ body {
         border-color: rgba(255, 255, 255, 0.4)!important;
     }
 
-    .fullscreen-add-properties {
+    .fullscreen-add-properties, .fullscreen-mobile-dialog {
         position: fixed;
         height: 100%;
         width: 100%;
@@ -707,7 +709,7 @@ body {
     .mobile-tabs {
         grid-template-rows: 50px 1fr 70px;
     }
-    .fullscreen-add-properties .image-list-header {
+    .fullscreen-add-properties .image-list-header, .fullscreen-mobile-dialog .image-list-header {
         margin-bottom: 0px;
     }
     .mobile-fullscreen-content {
@@ -825,6 +827,10 @@ input[type="radio"]:checked+label > svg {
     width: 28px;
     height:  28px;
     cursor: pointer;
+}
+
+#CROPMODAL .modal-dialog {
+    max-width: unset;
 }
 
 #pageArrangementDialog .modal-dialog, #layoutSnippetsSelection .modal-dialog {
@@ -1123,11 +1129,10 @@ li.spread-separator {
     justify-content: center;
 }
 .snippet-thumb.big {
-    max-width: 250px;
     height: unset;
     max-height: unset; /*250px;*/
     margin-bottom: 6px;
-    min-width: 150px;
+    width: 100%;
 }
 .snippet-thumb.big > img {
     border: 1px solid var(--mobile-button-border);
@@ -1157,10 +1162,6 @@ li.spread-separator {
 .snippet-thumb.layout-dialog {
     width: unset;
     height: unset;
-    max-height: unset;
-    max-width: unset;
-    min-width: unset;
-    min-height: unset;
     margin: 0px 10px 10px 0;
     border: 1px solid var(--mobile-button-border);
 }
@@ -1329,6 +1330,21 @@ input[type='range']::-webkit-slider-thumb {
 
 input[type='range']::-moz-range-thumb {
     background-color: var(--bs-primary);
+}
+
+.slider-catch-radius::-webkit-slider-thumb {
+    background-clip: padding-box;
+    border: 0.4rem solid rgba(0, 0, 0, 0);
+    transform: scale(4);
+    box-shadow: none;
+}
+
+.slider-catch-radius::-moz-range-thumb {
+    background-clip: padding-box;
+    border: 0.4rem solid rgba(0, 0, 0, 0);
+    box-sizing: border-box;
+    transform: scale(4);
+    box-shadow: none;
 }
 
 
@@ -1866,6 +1882,29 @@ input#invert-image-checker {
 }
 .color-picker-color.selected {
     border: black 2px solid;
+}
+.red-line-for-transparent-color {
+    position: absolute;
+    height: 3px;
+    width: 25px;
+    top: 13px;
+    left: 1px;
+    transform-origin: 50% 50%;
+    transform: rotate(45deg);
+    background-color: red;
+}
+.color-picker-color.selected .red-line-for-transparent-color {
+    left: 0px;
+    top: 12px;
+}
+.text-large-properties .color-picker-color .red-line-for-transparent-color {
+    width: 18px;
+    top: 10px;
+    left: 2px;
+}
+.text-large-properties .color-picker-color.selected .red-line-for-transparent-color {
+    top: 9px;
+    left: 1px;
 }
 #custom-color-picker {
     width: 35px;
@@ -2497,7 +2536,7 @@ input#invert-image-checker {
 
 .mobile-navbar {
     display: none;
-    position: fixed !important; /* to not be overidden by BS; set to fixed instead of absolute, because scale moves navbar out of sight */
+    position: absolute !important; /* to not be overidden by BS */
     flex-direction: column;
     left: 0;
     top: 0;
@@ -2705,4 +2744,4 @@ input#invert-image-checker {
     }
 
 }
-
+ 
