Refactor load product data with variants via rest api

--- a/view/base/templates/product/price/amount/default.phtml
+++ b/view/base/templates/product/price/amount/default.phtml
@@ -1,7 +1,7 @@
 
 <?php /** @var $block \Magento\Framework\Pricing\Render\Amount */ ?>
 
-<span class="price-container <?= $block->escapeHtmlAttr($block->getAdjustmentCssClasses()) ?>"
+<span class="price-container <?= $block->escapeHtmlAttr($block->getAdjustmentCssClasses()) ?>">
     <?php if ($block->getDisplayLabel()) :?>
         <span class="price-label"><?= $block->escapeHtml($block->getDisplayLabel()) ?></span>
     <?php endif; ?>
