--- a/view/base/templates/designer/page/view/designer.phtml
+++ b/view/base/templates/designer/page/view/designer.phtml
@@ -72,10 +72,10 @@
        "*": {
             "Digitalprint_PrintessDesigner/js/printess": {
                 "session": <?= $block->getSession() ?>,
-                "printess": <?= $block->getJsonConfig() ?>,
-                "variants":  <?= $block->getJsonVariants() ?>
+                "printess": <?= $block->getJsonConfig() ?>
             }
        }
-
     }
 </script>
+
+<?= $block->getPriceTemplate() ?>
