Bugfix special prices and catalog price rules

--- a/view/base/templates/product/price/final_price.phtml
+++ b/view/base/templates/product/price/final_price.phtml
@@ -1,4 +1,4 @@
-<% if (data.special_price) { %>
+<% if (data.has_special_price) { %>
     <div class="special-price mb-2 fs-3 lh-1 text-secondary">
         <%- data.special_price %>
     </div>
