Add support for external design picker

--- a/view/base/templates/designer/page/view/designer.phtml
+++ b/view/base/templates/designer/page/view/designer.phtml
@@ -72,7 +72,8 @@
        "*": {
             "Digitalprint_PrintessDesigner/js/printess": {
                 "session": <?= $block->getSession() ?>,
-                "printess": <?= $block->getJsonConfig() ?>
+                "printess": <?= $block->getJsonConfig() ?>,
+                "designPicker": <?= $block->getDesignPickerConfig() ?>
             }
        }
     }
