--- a/view/base/web/css/bs-layout.css
+++ b/view/base/web/css/bs-layout.css
@@ -341,6 +341,10 @@ body {
     grid-template-columns: auto 1fr;
 }
 
+.btn-outline-secondary:hover svg {
+    fill: var(--bs-light) !important;
+}
+
 .corner-tools h2 {
     font-size: 12pt;
     justify-self: flex-start;
@@ -1101,6 +1105,29 @@ body {
     overflow-y: auto;
 }
 
+.error-list svg {
+    width: 20px;
+    min-width: 20px;
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+.input-error {
+    border-color: red;
+}
+
+.image-missing .nav-tabs {
+    border-color: red;
+}
+
+.image-missing a.nav-link.active {
+    border-color: red red #fff;
+}
+
+.image-missing .tab-content {
+    border-color: red;
+}
+
 .token-warning {
     display: none;
     border: 3px solid red;
@@ -1280,17 +1307,29 @@ li.spread-separator {
     width: 28px;
     height: 28px;
     position: absolute;
-    right: 12px;
+    right: -5px;
+    /* 12px; */
     top: 30px;
     color: #6aad00;
     background-color: white;
     border-radius: 4px;
-    box-shadow: 0 0 0 4px white, 2px 2px 0 4px black;
+    /*box-shadow: 0 0 0 4px white, 2px 2px 0 4px black;*/
+    box-shadow: 0 0 0 4px white, 1px 1px 2px 4px #000000AA;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    border: 2px solid #6aad00;
+    /*border: 2px solid #6aad00;*/
+}
+
+.spread-drag-hint {
+    position: absolute;
+    left: 20px;
+    top: 32px;
+    padding: 4px;
+    display: inline-block;
+    background: rgba(255, 255, 255, 0.8);
+    color: var(--bs-primary);
 }
 
 .remove-pages-icon {
@@ -1299,8 +1338,13 @@ li.spread-separator {
     border-color: #ad1700;
 }
 
+.remove-pages-icon>.delete-btn {
+    color: var(--bs-primary);
+}
+
 .add-icon {
     color: #6aad00;
+    color: var(--bs-primary);
     height: 20px;
     margin: 0px;
 }
@@ -1389,6 +1433,10 @@ li.spread-separator {
         padding: 20px !important;
     }
 
+    #pageArrangementDialog .pages-container {
+        /* justify-content: space-between; */
+    }
+
     .arrange-pages-info-text,
     #layoutSnippetsSelection p {
         font-size: 0.875rem;
@@ -1403,12 +1451,13 @@ li.spread-separator {
     .add-pages-icon,
     .remove-pages-icon,
     .move-pages-icon {
-        width: 38px;
-        height: 38px;
+        width: 25px;
+        height: 25px;
+        z-index: 10;
     }
 
     .add-icon {
-        height: 30px;
+        height: 25px;
     }
 
     .remove-pages-icon {
@@ -1420,14 +1469,21 @@ li.spread-separator {
         left: calc(50% - 19px);
     }
 
+    .spread-drag-hint {
+        left: 10px;
+        top: 45%;
+        font-size: 12px;
+    }
+
     li.spread-item {
-        width: 100%;
+        width: 42%;
+        margin-bottom: 10px;
     }
 
     li.spread-separator {
         margin: 0px;
-        width: 100%;
-        height: 20px;
+        width: 20px;
+        height: auto;
         grid-template-columns: 0 1fr;
         grid-template-rows: 1fr;
     }
@@ -2012,6 +2068,16 @@ input[type='range']::-moz-range-thumb {
     box-shadow: 2px 2px black;
 }
 
+.use-count {
+    border: 2px solid #ffffff;
+    background: var(--bs-primary);
+    color: #ffffff;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .delete-btn-container {
     display: none;
     position: absolute;
@@ -2087,6 +2153,24 @@ input#invert-image-checker {
     cursor: pointer;
 }
 
+.form-switch .form-check-input {
+    width: 4em;
+    height: 2em;
+}
+
+.form-switch .form-check-label {
+    width: auto;
+    cursor: pointer;
+    font-size: 16pt;
+    margin-left: 10px;
+    line-height: 40px;
+}
+
+.form-check-input:checked {
+    background-color: var(--bs-primary);
+    border-color: var(--bs-primary);
+}
+
 @media screen and (max-width: 896px) {
     .form-check.form-switch.mt-3 {
         display: flex;
@@ -2102,12 +2186,19 @@ input#invert-image-checker {
         margin-top: 0px;
         width: 100%;
         height: 30px;
-        border-color: var(--bs-primary);
+        /* border-color: var(--bs-primary); */
     }
 
     label.form-check-label {
         position: absolute;
         width: auto;
+    }
+
+    .form-switch {
+        padding: 0px;
+        margin: auto;
+        width: 60%;
+        margin-top: 20px;
     }
 }
 
@@ -2284,6 +2375,11 @@ input#invert-image-checker {
     position: absolute;
     top: 50%;
     right: 10px;
+}
+
+.dropdown-menu {
+    overflow: auto;
+    max-height: 40vh;
 }
 
 /*
@@ -2780,6 +2876,22 @@ input#invert-image-checker {
     fill: white;
 }
 
+.horizontal-scissor-button {
+    position: relative;
+    width: 30px;
+    display: block;
+    place-self: center;
+    border: 1px dashed #777;
+}
+
+.vertical-scissor-button {
+    position: relative;
+    height: 30px;
+    display: block;
+    place-self: center;
+    border: 1px dashed #777;
+}
+
 .mobile-property-caption {
     grid-row: 3;
     color: var(--mobile-button-color);
@@ -2882,6 +2994,7 @@ input#invert-image-checker {
     right: 10px;
     top: -35px;
     z-index: 90;
+    fill: var(--bs-light);
 }
 
 .mobile-property-nav-button {
@@ -3033,7 +3146,7 @@ input#invert-image-checker {
 
 .textButtonContainer>button {
     padding: 4px 8px;
-    font-family: Lato, sans-serif;
+    font-family: var(--font-family);
     /* is overwritten by user-agent style-sheet ??? */
     border-radius: 4px;
     border: 0px solid var(--printess-textColor);
