Add customizable pricing options in connection with printess designer layout configurations

--- a/view/base/templates/designer/page/view/designer.phtml
+++ b/view/base/templates/designer/page/view/designer.phtml
@@ -28,13 +28,15 @@
 
             <div class="container-fluid">
                 <div class="row mb-4">
-                    <div class="col fs-4 fw-bold">
-                        <?= $block->getName() ?>
-                    </div>
+                    <div class="js-cart-title col fs-4 fw-bold">&nbsp;</div>
+                </div>
+                <div class="row">
+                    <div class="col js-cart-price fs-3">&nbsp;</div>
                 </div>
                 <div class="row mb-4">
-                    <div class="col" id="designerProductPrice">&nbsp;</div>
+                    <div class="col js-cart-legal-notice">&nbsp;</div>
                 </div>
+
                 <div class="row mb-4">
                     <div class="col">
                         <div class="input-group">
